--- a/main/style/style.css
+++ b/main/style/style.css
@@ -2,6 +2,125 @@
 
 /* colors
  verde: #49a09d
- lilas:
-
+ lilas: #9082e4
 */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color:#4e1600;
+    height: 100vh;
+    width: 100vw;
+}
+body{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    
+    overflow: hidden;
+
+    background-color: rgb(252, 240, 232);
+    width: 250px;
+    height: 540px;
+    border: 0px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.449);
+
+    transition: width 0.3s, height 0.3s;
+    transform: translate(-50%, -50%);
+    transition-timing-function: ease;
+}
+
+section#login > div#image{
+    display: block;
+    background: #9082e4 url(../images/pexels-photospublic-33041.jpg) no-repeat;
+    border: 0px;
+    background-size: cover;
+    background-position: top;
+    height: 300px;
+    
+}
+section#login > div#form{
+    display: block;
+    padding: 10px;
+    color: #4e1600;
+}
+div#form{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#form > p {
+    font-size: 0.8em;
+    padding-bottom: 5px;
+}
+
+form > div.field{
+    display: block;
+    margin-bottom: 10px;
+}
+form > div.field > input{
+    border-radius: 5px;
+    
+}
+div.field > label {
+    display: none;
+}
+
+div.field > span.material-symbols-outlined{
+    font-size: 1.5em;
+    
+}
+div.field > input{
+    border: 0px;
+    width: calc(100% - 55px);
+    height: 100%;
+    padding-top: 10px;
+
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 35px;
+    background-color: #b17301;
+    color: white;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0px 2px 2px rgba(104, 62, 2, 0.633);
+    
+}
+form > input[type=submit]:hover{
+    background-color: #e99906;
+}
+form > a.button{
+    display: block;
+    text-align: center;
+    text-size-adjust: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-decoration: none;
+    color: #4e1600;
+}
+form > a.button:hover{
+    color: #e99906;
+}
+
