--- a/main/style/mediaq.css
+++ b/main/style/mediaq.css
@@ -29,6 +29,9 @@
         display: block;
         margin-bottom: 15px;
     }
+    form > input[type=submit]{
+        font-size: 1.4em;
+    }
 }
 @media screen and (min-width: 992px) and (max-width: 1200px){
     body{
@@ -65,6 +68,9 @@
         height: 100%;
         padding-top: 12px;
     
+    }
+    form > input[type=submit]{
+        font-size: 1.5em;
     }
     
 }
