--- a/main/style/style.css
+++ b/main/style/style.css
@@ -76,7 +76,7 @@ form > div.field{
 }
 form > div.field > input{
     border-radius: 5px;
-    
+    font-size: large;
 }
 div.field > label {
     display: none;
@@ -90,7 +90,7 @@ div.field > input{
     border: 0px;
     width: calc(100% - 55px);
     height: 100%;
-    padding-top: 10px;
+    padding-top: 5px;
 
 }
 
